--- a/real1.html
+++ b/real1.html
@@ -5,6 +5,7 @@
     <title>Portfolio</title>
     <nav>
       <ul>
+        <li><a href="main.html">Home</a></li>
         <li class="menu-deroulant">
           <a href="#">Achievements</a>
           <ul class="sous-menu">
@@ -16,14 +17,13 @@
         <li><a href="contact.html">Contact me</a></li>
       </ul>
     </nav>
-      </nav>
 </head>
 <body>
-    <h1>Welcome on my portfolio !</h1>
+    <h1>My first project</h1>
     <hr>
     <section>
         <p>
-            Welcome on my portfolio. 
+            Here is my first project
         </p>
     </section>
   
