--- a/aboutMe.html
+++ b/aboutMe.html
@@ -31,11 +31,21 @@
     <body>
 
     
-        <h1>About me</h1>
+        <h1><span>About me</span></h1>
 
         <section>
-            <p>
-                I am 19 years old ...
+            <p class="About">
+                My name is Gwendal Rodrigues, I am a 19 years old IT student at IUT of Reims, France.
+            </p>
+            <p class="About">
+                Professional Objectives : 
+                <li class="li">My first objective is to finish my curriculum |･ω･).</li>
+                <li class="li">A dream of mine would be to become a security solution developer or work in cybersecurity.</li>
+            </p>
+            <p class="About">
+              Personnal Objectives:
+                <li class="li">I want to take the time needed to learn how to draw.\n</li>
+                <li class="li">I want to do some sports again, any sport would be great (like i'm reading lots of mangas and this sh*t gave me very much want to try lots of things like mountain climbing or doing volleyball).</li>
             </p>
         </section> 
     </body>
