--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
         
         <nav>
             <ul>
-              <li><a href="main.html">Home</a></li>
+              <li><a href="index.html">Home</a></li>
               <li class="menu-deroulant">
                 <a href="#">Achievements</a>
                 <ul class="sous-menu">
