--- a/aboutMe.html
+++ b/aboutMe.html
@@ -1,10 +1,11 @@
 <!doctype html>
 <html lang="fr">
   <head>
-    <title>Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;1,300;1,400&family=Roboto:ital,wght@0,300;0,400;1,300;1,400&display=swap" rel="stylesheet">    <title>Portfolio</title>
   </head>
   <body>
-
+    <p> World !</p> 
   </body>
 
 </html>
