--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;1,300;1,400&family=Roboto:ital,wght@0,300;0,400;1,300;1,400&display=swap" rel="stylesheet">    <title>Portfolio</title>
   </head>
   <body>
-    <p> World !</p> 
+    <p> Bienvenue dans mon Portfolio !</p>
+    <center>
+      <div class="switch">
+          <input id="language-toggle" class="check-toggle check-toggle-round-flat" type="checkbox">
+          <label for="language-toggle"></label>
+          <span class="on">BN</span>
+          <span class="off">EN</span>
+        </div>
+     </center>
   </body>
 
 </html>
