--- a/index.html
+++ b/index.html
@@ -1,19 +1,15 @@
 <!doctype html>
 <html lang="fr">
   <head>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;1,300;1,400&family=Roboto:ital,wght@0,300;0,400;1,300;1,400&display=swap" rel="stylesheet">    <title>Portfolio</title>
   </head>
   <body>
-    <p> Bienvenue dans mon Portfolio !</p>
-    <center>
-      <div class="switch">
-          <input id="language-toggle" class="check-toggle check-toggle-round-flat" type="checkbox">
-          <label for="language-toggle"></label>
-          <span class="on">BN</span>
-          <span class="off">EN</span>
-        </div>
-     </center>
+    <h1 style="text-align: center; font-style: Roboto; color: azure;">Bienvenue sur mon Portfolio !</h1>
+    <article>
+      <div id="me"></div>
+    </article>
   </body>
 
 </html>
