--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;1,300;1,400&family=Roboto:ital,wght@0,300;0,400;1,300;1,400&display=swap" rel="stylesheet">    <title>Portfolio</title>
   </head>
-  <body>
+  <body style="background-color: #121212;">
     <h1 style="text-align: center; font-style: Roboto; color: azure;">Bienvenue sur mon Portfolio !</h1>
     <article>
-      <div id="me"></div>
+      <div id="me">
+        <span>
+          <div id="name">Rodrigues Gwendal aka DaVyer/sleepin DaVy</div>
+        </span>
+      </div>
     </article>
   </body>
 
