--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;1,300;1,400&family=Roboto:ital,wght@0,300;0,400;1,300;1,400&display=swap" rel="stylesheet">    <title>Portfolio</title>
   </head>
   <body style="background-color: #121212;">
-    <h1 style="text-align: center; font-style: Roboto; color: azure;">Bienvenue sur mon Portfolio !</h1>
+    <h1>Bienvenue sur mon Portfolio !</h1>
     <article>
       <div id="me">
         <span>
-          <div id="name">Rodrigues Gwendal aka DaVyer/sleepin DaVy</div>
+          <div id="name">Rodrigues Gwendal</div>
+          <div id="pseudo">DaVyer/Rodrigues Gwendal</div>
+          <div id="étude">Etudiant en BUT Informatique</div>
         </span>
       </div>
     </article>
