--- a/index.html
+++ b/index.html
@@ -5,17 +5,9 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;1,300;1,400&family=Roboto:ital,wght@0,300;0,400;1,300;1,400&display=swap" rel="stylesheet">    <title>Portfolio</title>
   </head>
-  <body style="background-color: #121212;">
-    <h1>Bienvenue sur mon Portfolio !</h1>
-    <article>
-      <div id="me">
-        <span>
-          <div id="name">Rodrigues Gwendal</div>
-          <div id="pseudo">DaVyer/Rodrigues Gwendal</div>
-          <div id="étude">Etudiant en BUT Informatique</div>
-        </span>
-      </div>
-    </article>
+  <body class="body">
+    <h1 class="title">Bienvenue sur mon Portfolio !</h1>
+    
   </body>
 
 </html>
